--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                     <div class="form-control">
                         <textarea id="message" name="message" placeholder="Message" required></textarea>
                     </div>
-                    <input type="submit" value="Send" class="btn btn-primary pageclip-form__submit">
+                    <button type="submit" class="button pageclip-form__submit">
+                    <span>Submit</span>
+                    </button>
                 </form>
             </div>
         </div>
