--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="form-control">
                         <textarea id="message" name="message" placeholder="Message" required></textarea>
                     </div>
-                    <button type="submit" class="button pageclip-form__submit">
+                    <button class="button pageclip-form__submit--dark-loader" type="submit">
                     <span>Submit</span>
                     </button>
                 </form>
