--- a/nav.html
+++ b/nav.html
@@ -1,4 +1,5 @@
 
+<script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
     <!-- Navbar -->
     <div class="navbar">
         <div class="container flex">
@@ -14,3 +15,4 @@
             </nav>
         </div>
     </div>
+    </script>
