--- a/nixwsldoc/doc.html
+++ b/nixwsldoc/doc.html
@@ -43,5 +43,7 @@
     <div id="main-content"></div>
     <script>loadhtmlSavedValue("main-content")</script>
 
+<script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+
 </body>
 </html>
