added some underline animations

--- a/nav.html
+++ b/nav.html
@@ -8,8 +8,8 @@
 
             <nav>
                 <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="projects.html">Projects</a></li>
+                    <li><a class="underline-effect" href="/">Home</a></li>
+                    <li><a class="underline-effect" href="projects.html">Projects</a></li>
                     <li><a href="assets/CV_(23).pdf" class="btn-top" download="omer-attia-cv.pdf">Download CV</a></li>
                 </ul>
             </nav>
