--- a/nixwsldoc/doc.html
+++ b/nixwsldoc/doc.html
@@ -15,8 +15,8 @@
     <div id="sidebar">
         <button class="sidemenubtn" onclick="toggleSubMenu('sub1')">Menu 1</button>
         <div class="sub-menu" id="sub1">
-            <a href="doc.html" onclick="saveValue('omer.html')"><button class="subitem">Sub-item 1</button></a>
-            <button class="subitem">Sub-item 2</button>
+            <a href="doc.html" onclick="saveValue('omer.html')"><button class="subitem">Omer</button></a>
+            <a href="doc.html" onclick="saveValue('hadar.html')"><button class="subitem">hadar</button></a>
         </div>
         <button class="sidemenubtn" onclick="toggleSubMenu('sub2')">Menu 2</button>
         <div class="sub-menu" id="sub2">
