--- a/footer.html
+++ b/footer.html
@@ -8,9 +8,9 @@
             </div>
             <nav class="footnav">
                 <ul>
-                    <li><a href="/" taget="_blank">Home</a></li>
-                    <li><a href="projects.html" taget="_blank">Projects</a></li>
-                    <li><a href="https://github.com/vitrobiani/vitrobiani.github.io" taget="_blank">Docs</a></li>
+                    <li><a class="underline-effect" href="/" taget="_blank">Home</a></li>
+                    <li><a class="underline-effect" href="projects.html" taget="_blank">Projects</a></li>
+                    <li><a class="underline-effect" href="https://github.com/vitrobiani/vitrobiani.github.io" taget="_blank">Docs</a></li>
                 </ul>
             </nav>
             <div class="social">
