--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="showcase-text">
                 <h1>Welcome</h1>
                 <p>Hello my name is Omer Attia, Im software engineering student entering the third year of study.<br>
-                    For some of my projects please check out the <a href="/projects.html">Projects page</a></p>
+                    For some of my projects please check out the <a class="underline-effect" href="/projects.html">Projects page</a></p>
                 <a href="https://github.com/vitrobiani/" class="btn btn-outline" target="_blank"><i class="fab fa-github"></i>GitHub</a>
                 <a href="https://www.linkedin.com/in/omer-attia-3a3337256/" class="btn btn-outline" target="_blank"><i class="fab fa-linkedin"></i>Linkedin</a>
                 <a href="/assets/CV_(23).pdf" class="btn btn-outline" target="_blank"><i class="fas fa-address-card"></i>Resume</a>
