--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container grid">
             <div class="showcase-text">
                 <h1>Welcome</h1>
-                <p>Hello my name is Omer Attia, Im software engineering student entering the third year of study.<br>
+                <p>Hello my name is Omer Attia, I'm software engineering student entering my third year of study.<br>
                     For some of my projects please check out the <a class="underline-effect" href="/projects.html">Projects page</a></p>
                 <a href="https://github.com/vitrobiani/" class="btn btn-outline" target="_blank"><i class="fab fa-github"></i>GitHub</a>
                 <a href="https://www.linkedin.com/in/omer-attia-3a3337256/" class="btn btn-outline" target="_blank"><i class="fab fa-linkedin"></i>Linkedin</a>
