--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
             <div>
                 <h1 class="xl">Projects</h1>
                 <p class="lead">
-                    These are some of my Projects, everything is open feel free to use anything!
+                    These are some of my Projects. everything is open, feel free to use anything!
                 </p>
             </div>
             <img src="images/docs.png" alt="">
