--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="nav"></div>
     <script>loadhtml("nav.html", "nav")</script>
 
-    <button class="dark-toggle" type="button" data-theme-toggle aria-label=""></button>
+    <button class="dark-toggle fade-in" type="button" data-theme-toggle aria-label=""></button>
     
     <!-- Showcase -->
     <section class="showcase">
