--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- Languages -->
     <section class="languages fade-in">
         <h2 class="md text-center my-2">
-            Languages
+            Skills & Languages
         </h2>
         <div class="container flex ">
               <div class="card">
@@ -70,6 +70,10 @@
               <div class="card">
                 <h4>C</h4>
                 <img src="images/logos/C_Logo_optimized.png" alt="">
+              </div>
+              <div class="card">
+                <h4>Postgres</h4>
+                <img src="images/logos/Postgresql_elephant.svg_optimized.png" alt="">
               </div>
         </div>
     </section>
