--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
                 <h4>Postgres</h4>
                 <img src="images/logos/Postgresql_elephant.svg_optimized.png" alt="">
               </div>
+              <div class="card">
+                <h4>Nix</h4>
+                <img src="images/logos/nixos_logo_icon_248363.png" width="90" height="90" alt="">
+              </div>
         </div>
     </section>
 
