--- a/nixwsldoc/doc.html
+++ b/nixwsldoc/doc.html
@@ -13,10 +13,14 @@
 
     <!-- Sidebar -->
     <div id="sidebar">
+        <div class="search-container">
+            <input type="text" class="search-input" id="search-input" placeholder="Search..." oninput="filterItems()" />
+        </div>
+
         <button class="sidemenubtn" onclick="toggleSubMenu('sub1')">Menu 1</button>
         <div class="sub-menu" id="sub1">
             <a href="doc.html" onclick="saveValue('omer.html')"><button class="subitem">Omer</button></a>
-            <a href="doc.html" onclick="saveValue('hadar.html')"><button class="subitem">hadar</button></a>
+            <a href="doc.html" onclick="saveValue('hadar.html')"><button class="subitem">King</button></a>
         </div>
         <button class="sidemenubtn" onclick="toggleSubMenu('sub2')">Menu 2</button>
         <div class="sub-menu" id="sub2">
