--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="nav"></div>
     <script>loadhtml("nav.html", "nav")</script>
 
-    <button class="dark-toggle fade-in" type="button" data-theme-toggle aria-label=""></button>
+    <button class="dark-toggle" type="button" data-theme-toggle aria-label=""></button>
     
     <!-- Showcase -->
     <section class="showcase">
@@ -75,10 +75,10 @@
                 <h4>Postgres</h4>
                 <img src="images/logos/Postgresql_elephant.svg_optimized.png" alt="">
               </div>
-              <div class="card">
+              <!-- <div class="card">
                 <h4>Nix</h4>
                 <img src="images/logos/nixos_logo_icon_248363.png" width="90" height="90" alt="">
-              </div>
+              </div> -->
         </div>
     </section>
 
