--- a/nav.html
+++ b/nav.html
@@ -10,7 +10,7 @@
                 <ul>
                     <li><a class="underline-effect" href="/">Home</a></li>
                     <li><a class="underline-effect" href="projects.html">Projects</a></li>
-                    <li><a href="assets/CV_(23).pdf" class="btn-top" download="omer-attia-cv.pdf">Download CV</a></li>
+                    <li><a href="assets/CV_.pdf" class="btn-top" download="omer-attia-cv.pdf">Download CV</a></li>
                 </ul>
             </nav>
         </div>
