--- a/nixwsldoc/doc.html
+++ b/nixwsldoc/doc.html
@@ -24,7 +24,7 @@
         </div>
         <button class="sidemenubtn" onclick="toggleSubMenu('sub2')">Menu 2</button>
         <div class="sub-menu" id="sub2">
-            <button class="subitem">Sub-item 1</button>
+            <a href="doc.html" onclick="saveValue('omer.html')"><button class="subitem">WASM</button></a>
             <button class="subitem">Sub-item 2</button>
         </div>
         <button class="sidemenubtn" onclick="toggleSubMenu('sub3')">Menu 3</button>
