--- a/nixwsldoc/doc.html
+++ b/nixwsldoc/doc.html
@@ -24,7 +24,7 @@
         </div>
         <button class="sidemenubtn" onclick="toggleSubMenu('sub2')">Menu 2</button>
         <div class="sub-menu" id="sub2">
-            <a href="doc.html" onclick="saveValue('wasm.html')"><button class="subitem">WASM5</button></a>
+            <a href="doc.html" onclick="saveValue('wasm.html')"><button class="subitem">WASM6ton></a>
             <button class="subitem">Sub-item 2</button>
         </div>
         <button class="sidemenubtn" onclick="toggleSubMenu('sub3')">Menu 3</button>
