--- a/nixwsldoc/wasm.html
+++ b/nixwsldoc/wasm.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>TITLE</title>
+    <title>WASM</title>
     <style>
         html,
         body,
@@ -13,7 +13,7 @@
             height: 100%;
             overflow: hidden;
             position: absolute;
-            background: black;
+            background: rgb(255, 1, 136);
             z-index: 0;
         }
     </style>
