--- a/nixwsldoc/wasm.html
+++ b/nixwsldoc/wasm.html
@@ -1,29 +1,31 @@
-<html lang="en">
 
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <title>WASM</title>
     <style>
-        html,
-        body,
         canvas {
             margin: 0px;
             padding: 0px;
-            width: 100%;
-            height: 100%;
+            width: 80%;
+            height: 80%;
             overflow: hidden;
             position: absolute;
-            background: rgb(255, 1, 136);
+            background: rgb(1, 255, 115);
             z-index: 0;
         }
     </style>
 </head>
-
 <body>
+
+    <h1>OMER HA MELECH</h1>
 <canvas id="glcanvas" tabindex='1'></canvas>
 <!-- Minified and statically hosted version of https://github.com/not-fl3/macroquad/blob/master/js/mq_js_bundle.js -->
-<script src="https://not-fl3.github.io/miniquad-samples/mq_js_bundle.js"></script>
+<script src="https://github.com/not-fl3/macroquad/blob/master/js/mq_js_bundle.js"></script>
 <script>load("macroquad_game_.wasm");</script> <!-- Your compiled wasm file -->
-</body>
 
+</body>
 </html>
