--- a/nixwsldoc/doc.html
+++ b/nixwsldoc/doc.html
@@ -24,7 +24,8 @@
         </div>
         <button class="sidemenubtn" onclick="toggleSubMenu('sub2')">Menu 2</button>
         <div class="sub-menu" id="sub2">
-            <a href="doc.html" onclick="saveValue('wasm.html')"><button class="subitem">King</button></a>
+            <!-- <a href="doc.html" onclick="saveValue('wasm.html')"><button class="subitem">King</button></a> -->
+            <a href="wasm.html" target="_blank""><button class="subitem">tarot</button></a>
             <button class="subitem">Sub-item 2</button>
         </div>
         <button class="sidemenubtn" onclick="toggleSubMenu('sub3')">Menu 3</button>
