--- a/nixwsldoc/wasm.html
+++ b/nixwsldoc/wasm.html
@@ -10,21 +10,21 @@
         canvas {
             margin: 0px;
             padding: 0px;
-            width: 80%;
-            height: 80%;
+            width: 100%;
+            height: 100%;
             overflow: hidden;
             position: absolute;
-            background: rgb(1, 255, 115);
+            background: rgb(0, 0, 0);
             z-index: 0;
         }
     </style>
 </head>
 <body>
 
-    <h1>OMER HA MELECH</h1>
 <canvas id="glcanvas" tabindex='1'></canvas>
 <!-- Minified and statically hosted version of https://github.com/not-fl3/macroquad/blob/master/js/mq_js_bundle.js -->
-<script src="https://github.com/not-fl3/macroquad/blob/master/js/mq_js_bundle.js"></script>
+<script src="https://not-fl3.github.io/miniquad-samples/mq_js_bundle.js"></script>
+
 <script>load("macroquad_game_.wasm");</script> <!-- Your compiled wasm file -->
 
 </body>
