--- a/nixwsldoc/doc.html
+++ b/nixwsldoc/doc.html
@@ -25,7 +25,9 @@
         <button class="sidemenubtn" onclick="toggleSubMenu('sub2')">Menu 2</button>
         <div class="sub-menu" id="sub2">
             <!-- <a href="doc.html" onclick="saveValue('wasm.html')"><button class="subitem">King</button></a> -->
-            <a href="wasm.html" target="_blank""><button class="subitem">tarot</button></a>
+            <a href="macroquad_game.html" target="_blank""><button class="subitem">tarot</button></a>
+            <a href="pascal.html" target="_blank""><button class="subitem">pascal</button></a>
+            <!-- <a href="doc.html" onclick="saveValue('pascal.html')"><button class="subitem">pascal</button></a> -->
             <button class="subitem">Sub-item 2</button>
         </div>
         <button class="sidemenubtn" onclick="toggleSubMenu('sub3')">Menu 3</button>
